--- a/app/src/main/res/layout/include_control.xml
+++ b/app/src/main/res/layout/include_control.xml
@@ -9,7 +9,7 @@
 
 
     <LinearLayout
-        android:id="@+id/area_device"
+        android:id="@+id/area_serial"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
@@ -24,26 +24,21 @@
 
         <org.angmarch.views.NiceSpinner
             android:id="@+id/spinner_devices"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/SpinnerStyle"
             android:layout_weight="1.8"
-            android:singleLine="true"
-            android:text="/sys/dev/ttyS1"
-            android:textSize="20pt" />
+            android:text="/sys/dev/ttyS1" />
 
         <TextView
             style="@style/LabelStyle"
             android:layout_marginLeft="16pt"
             android:text="波特率：" />
 
+
         <org.angmarch.views.NiceSpinner
             android:id="@+id/spinner_baudrate"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/SpinnerStyle"
             android:layout_weight="1.2"
-            android:singleLine="true"
-            android:text="115200"
-            android:textSize="20pt" />
+            android:text="115200" />
 
         <Button
             android:id="@+id/btn_switch"
@@ -51,7 +46,75 @@
             android:layout_height="wrap_content"
             android:text="连接" />
 
+
+        <ImageButton
+            android:id="@+id/btn_more_params"
+            android:layout_width="50pt"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="16pt"
+            android:background="@drawable/selector_serial_params_bg"
+            android:clickable="true"
+            android:gravity="center"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_keyboard_arrow_up_black_32dp"
+            android:text="↓"
+            android:textColor="#333333" />
+
+
     </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/area_serial2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/selector_serial_params_bg"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:padding="8pt"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/area_serial">
+
+        <TextView
+            style="@style/LabelStyle"
+            android:text="数据位：" />
+
+        <org.angmarch.views.NiceSpinner
+            android:id="@+id/spinner_databits"
+            style="@style/SpinnerStyle"
+            android:layout_weight="1"
+            android:duplicateParentState="true"
+            android:text="8" />
+
+        <TextView
+            style="@style/LabelStyle"
+            android:layout_marginLeft="16pt"
+            android:text="校验位：" />
+
+        <org.angmarch.views.NiceSpinner
+            android:id="@+id/spinner_parity"
+            style="@style/SpinnerStyle"
+            android:layout_weight="1.8"
+            android:duplicateParentState="true"
+            android:text="0 (NONE)" />
+
+        <TextView
+            style="@style/LabelStyle"
+            android:layout_marginLeft="16pt"
+            android:text="停止位：" />
+
+        <org.angmarch.views.NiceSpinner
+            android:id="@+id/spinner_stopbits"
+            style="@style/SpinnerStyle"
+            android:layout_weight="1"
+            android:duplicateParentState="true"
+            android:text="1" />
+
+    </LinearLayout>
+
 
     <LinearLayout
         android:id="@+id/area_tcp"
@@ -61,7 +124,7 @@
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/area_device">
+        app:layout_constraintTop_toBottomOf="@id/area_serial2">
 
         <TextView
             style="@style/LabelStyle"
